Encounter notes initial

--- a/Healthcare-Provider-Workbench.html
+++ b/Healthcare-Provider-Workbench.html
@@ -2222,6 +2222,133 @@ Add Fee
 </div>
 <!-- Templates & Workflows Content -->
 <div id="templatesContent" class="grid grid-cols-1 gap-6 hidden">
+<!-- Smart Blocks Section -->
+<div class="bg-white rounded-lg border border-gray-200 overflow-hidden">
+<div class="p-6">
+<div class="flex items-center justify-between mb-6">
+<div>
+<h2 class="text-lg font-semibold text-gray-900">Smart Blocks</h2>
+<p class="text-sm text-gray-600 mt-1">AI-powered clinical documentation blocks for faster note creation</p>
+</div>
+<button class="px-4 py-2 text-purple-600 border border-purple-200 bg-purple-50 rounded-button flex items-center whitespace-nowrap hover:bg-purple-100 transition-colors">
+<div class="w-4 h-4 flex items-center justify-center mr-2">
+<i class="ri-add-line"></i>
+</div>
+Create Smart Block
+</button>
+</div>
+<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+<div class="border border-gray-200 rounded-lg p-4 hover:border-purple-200 hover:bg-purple-50/30 transition-colors cursor-pointer">
+<div class="flex items-center mb-3">
+<div class="w-10 h-10 bg-purple-100 rounded-lg flex items-center justify-center mr-3">
+<i class="ri-brain-line text-purple-600"></i>
+</div>
+<div>
+<h3 class="text-sm font-medium text-gray-900">Chief Complaint</h3>
+<p class="text-xs text-gray-500">AI-assisted chief complaint documentation</p>
+</div>
+</div>
+<p class="text-xs text-gray-600 mb-3">Automatically structures patient's primary concern with relevant context and severity indicators.</p>
+<div class="flex items-center justify-between">
+<span class="text-xs text-purple-600 bg-purple-100 px-2 py-1 rounded-full">Coming Soon</span>
+<button class="text-gray-400 hover:text-gray-600">
+<i class="ri-more-2-fill"></i>
+</button>
+</div>
+</div>
+<div class="border border-gray-200 rounded-lg p-4 hover:border-purple-200 hover:bg-purple-50/30 transition-colors cursor-pointer">
+<div class="flex items-center mb-3">
+<div class="w-10 h-10 bg-purple-100 rounded-lg flex items-center justify-center mr-3">
+<i class="ri-stethoscope-line text-purple-600"></i>
+</div>
+<div>
+<h3 class="text-sm font-medium text-gray-900">Physical Exam</h3>
+<p class="text-xs text-gray-500">Structured physical examination templates</p>
+</div>
+</div>
+<p class="text-xs text-gray-600 mb-3">System-specific exam templates with normal/abnormal findings and clinical significance.</p>
+<div class="flex items-center justify-between">
+<span class="text-xs text-purple-600 bg-purple-100 px-2 py-1 rounded-full">Coming Soon</span>
+<button class="text-gray-400 hover:text-gray-600">
+<i class="ri-more-2-fill"></i>
+</button>
+</div>
+</div>
+<div class="border border-gray-200 rounded-lg p-4 hover:border-purple-200 hover:bg-purple-50/30 transition-colors cursor-pointer">
+<div class="flex items-center mb-3">
+<div class="w-10 h-10 bg-purple-100 rounded-lg flex items-center justify-center mr-3">
+<i class="ri-clipboard-line text-purple-600"></i>
+</div>
+<div>
+<h3 class="text-sm font-medium text-gray-900">Assessment & Plan</h3>
+<p class="text-xs text-gray-500">Clinical assessment and treatment planning</p>
+</div>
+</div>
+<p class="text-xs text-gray-600 mb-3">AI-guided differential diagnosis and evidence-based treatment recommendations.</p>
+<div class="flex items-center justify-between">
+<span class="text-xs text-purple-600 bg-purple-100 px-2 py-1 rounded-full">Coming Soon</span>
+<button class="text-gray-400 hover:text-gray-600">
+<i class="ri-more-2-fill"></i>
+</button>
+</div>
+</div>
+<div class="border border-gray-200 rounded-lg p-4 hover:border-purple-200 hover:bg-purple-50/30 transition-colors cursor-pointer">
+<div class="flex items-center mb-3">
+<div class="w-10 h-10 bg-purple-100 rounded-lg flex items-center justify-center mr-3">
+<i class="ri-heart-pulse-line text-purple-600"></i>
+</div>
+<div>
+<h3 class="text-sm font-medium text-gray-900">Vital Signs</h3>
+<p class="text-xs text-gray-500">Automated vital signs documentation</p>
+</div>
+</div>
+<p class="text-xs text-gray-600 mb-3">Smart interpretation of vital signs with trend analysis and clinical alerts.</p>
+<div class="flex items-center justify-between">
+<span class="text-xs text-purple-600 bg-purple-100 px-2 py-1 rounded-full">Coming Soon</span>
+<button class="text-gray-400 hover:text-gray-600">
+<i class="ri-more-2-fill"></i>
+</button>
+</div>
+</div>
+<div class="border border-gray-200 rounded-lg p-4 hover:border-purple-200 hover:bg-purple-50/30 transition-colors cursor-pointer">
+<div class="flex items-center mb-3">
+<div class="w-10 h-10 bg-purple-100 rounded-lg flex items-center justify-center mr-3">
+<i class="ri-time-line text-purple-600"></i>
+</div>
+<div>
+<h3 class="text-sm font-medium text-gray-900">History of Present Illness</h3>
+<p class="text-xs text-gray-500">Comprehensive symptom documentation</p>
+</div>
+</div>
+<p class="text-xs text-gray-600 mb-3">Guided history taking with symptom timelines and associated factors.</p>
+<div class="flex items-center justify-between">
+<span class="text-xs text-purple-600 bg-purple-100 px-2 py-1 rounded-full">Coming Soon</span>
+<button class="text-gray-400 hover:text-gray-600">
+<i class="ri-more-2-fill"></i>
+</button>
+</div>
+</div>
+<div class="border border-gray-200 rounded-lg p-4 hover:border-purple-200 hover:bg-purple-50/30 transition-colors cursor-pointer">
+<div class="flex items-center mb-3">
+<div class="w-10 h-10 bg-purple-100 rounded-lg flex items-center justify-center mr-3">
+<i class="ri-medicine-bottle-line text-purple-600"></i>
+</div>
+<div>
+<h3 class="text-sm font-medium text-gray-900">Medication Review</h3>
+<p class="text-xs text-gray-500">Smart medication reconciliation</p>
+</div>
+</div>
+<p class="text-xs text-gray-600 mb-3">Automated medication list review with interaction checks and dosing recommendations.</p>
+<div class="flex items-center justify-between">
+<span class="text-xs text-purple-600 bg-purple-100 px-2 py-1 rounded-full">Coming Soon</span>
+<button class="text-gray-400 hover:text-gray-600">
+<i class="ri-more-2-fill"></i>
+</button>
+</div>
+</div>
+</div>
+</div>
+</div>
 <!-- Templates Section -->
 <div class="bg-white rounded-lg border border-gray-200 overflow-hidden">
 <div class="p-6">
@@ -2340,6 +2467,59 @@ Create Template
 <i class="ri-pen-nib-line text-primary"></i>
 </div>
 <span class="text-sm">Signature</span>
+</button>
+</div>
+</div>
+<div>
+<h3 class="text-xs font-medium text-gray-500 uppercase mb-3">Smart Blocks</h3>
+<div class="space-y-2">
+<button class="element-btn w-full flex items-center p-2 text-gray-600 hover:bg-gray-50 rounded-lg">
+<div class="w-8 h-8 bg-purple-100 rounded-lg flex items-center justify-center mr-2">
+<i class="ri-brain-line text-purple-600"></i>
+</div>
+<span class="text-sm">Chief Complaint</span>
+</button>
+<button class="element-btn w-full flex items-center p-2 text-gray-600 hover:bg-gray-50 rounded-lg">
+<div class="w-8 h-8 bg-purple-100 rounded-lg flex items-center justify-center mr-2">
+<i class="ri-stethoscope-line text-purple-600"></i>
+</div>
+<span class="text-sm">Physical Exam</span>
+</button>
+<button class="element-btn w-full flex items-center p-2 text-gray-600 hover:bg-gray-50 rounded-lg">
+<div class="w-8 h-8 bg-purple-100 rounded-lg flex items-center justify-center mr-2">
+<i class="ri-medicine-bottle-line text-purple-600"></i>
+</div>
+<span class="text-sm">Medication Review</span>
+</button>
+<button class="element-btn w-full flex items-center p-2 text-gray-600 hover:bg-gray-50 rounded-lg">
+<div class="w-8 h-8 bg-purple-100 rounded-lg flex items-center justify-center mr-2">
+<i class="ri-heart-pulse-line text-purple-600"></i>
+</div>
+<span class="text-sm">Vital Signs</span>
+</button>
+<button class="element-btn w-full flex items-center p-2 text-gray-600 hover:bg-gray-50 rounded-lg">
+<div class="w-8 h-8 bg-purple-100 rounded-lg flex items-center justify-center mr-2">
+<i class="ri-clipboard-line text-purple-600"></i>
+</div>
+<span class="text-sm">Assessment & Plan</span>
+</button>
+<button class="element-btn w-full flex items-center p-2 text-gray-600 hover:bg-gray-50 rounded-lg">
+<div class="w-8 h-8 bg-purple-100 rounded-lg flex items-center justify-center mr-2">
+<i class="ri-time-line text-purple-600"></i>
+</div>
+<span class="text-sm">History of Present Illness</span>
+</button>
+<button class="element-btn w-full flex items-center p-2 text-gray-600 hover:bg-gray-50 rounded-lg">
+<div class="w-8 h-8 bg-purple-100 rounded-lg flex items-center justify-center mr-2">
+<i class="ri-user-heart-line text-purple-600"></i>
+</div>
+<span class="text-sm">Social History</span>
+</button>
+<button class="element-btn w-full flex items-center p-2 text-gray-600 hover:bg-gray-50 rounded-lg">
+<div class="w-8 h-8 bg-purple-100 rounded-lg flex items-center justify-center mr-2">
+<i class="ri-dna-line text-purple-600"></i>
+</div>
+<span class="text-sm">Family History</span>
 </button>
 </div>
 </div>
