--- a/index.html
+++ b/index.html
@@ -2176,6 +2176,10 @@ Edit
 </div>
 </div>
 </div>
+
+
+
+</div>
 <!-- Calendar Tab Content -->
 <div id="calendar-tab" class="tab-content">
 <div class="mb-4 flex justify-between items-center">
@@ -2560,6 +2564,144 @@ modalContent = `
 <i class="ri-alert-line"></i>
 </div>
 <p class="text-sm text-gray-900">Seasonal Pollen</p>
+</div>
+</div>
+</div>
+<div>
+<h4 class="text-sm font-medium text-gray-900 mb-3">Encounter Notes</h4>
+<div class="space-y-3">
+<div class="p-3 border border-gray-200 rounded-lg">
+<div class="flex justify-between items-start mb-2">
+<div>
+<h5 class="text-sm font-medium text-gray-900">Annual Physical Exam</h5>
+<p class="text-xs text-gray-500">Dr. Martinez • June 3, 2025</p>
+</div>
+<div class="flex items-center space-x-2">
+<span class="text-xs bg-blue-100 text-blue-800 px-2 py-0.5 rounded-full">Complete</span>
+<button class="text-gray-400 hover:text-gray-600">
+<i class="ri-download-line text-sm"></i>
+</button>
+</div>
+</div>
+<p class="text-xs text-gray-600">Patient presents for routine annual physical. Overall health status good. Discussed cholesterol management and dietary recommendations.</p>
+</div>
+<div class="p-3 border border-gray-200 rounded-lg">
+<div class="flex justify-between items-start mb-2">
+<div>
+<h5 class="text-sm font-medium text-gray-900">Follow-up Consultation</h5>
+<p class="text-xs text-gray-500">Dr. Martinez • May 20, 2025</p>
+</div>
+<div class="flex items-center space-x-2">
+<span class="text-xs bg-green-100 text-green-800 px-2 py-0.5 rounded-full">Complete</span>
+<button class="text-gray-400 hover:text-gray-600">
+<i class="ri-download-line text-sm"></i>
+</button>
+</div>
+</div>
+<p class="text-xs text-gray-600">Follow-up on blood pressure management. Patient showing improvement with current medication regimen.</p>
+</div>
+<div class="p-3 border border-gray-200 rounded-lg">
+<div class="flex justify-between items-start mb-2">
+<div>
+<h5 class="text-sm font-medium text-gray-900">Lab Results Review</h5>
+<p class="text-xs text-gray-500">Dr. Martinez • May 10, 2025</p>
+</div>
+<div class="flex items-center space-x-2">
+<span class="text-xs bg-yellow-100 text-yellow-800 px-2 py-0.5 rounded-full">Draft</span>
+<button class="text-gray-400 hover:text-gray-600">
+<i class="ri-edit-line text-sm"></i>
+</button>
+</div>
+</div>
+<p class="text-xs text-gray-600">Review of comprehensive metabolic panel results. Patient counseled on cholesterol levels and lifestyle modifications.</p>
+</div>
+</div>
+</div>
+<div>
+<h4 class="text-sm font-medium text-gray-900 mb-3">Other Files</h4>
+<div class="space-y-3">
+<div class="p-3 border border-gray-200 rounded-lg">
+<div class="flex items-center justify-between">
+<div class="flex items-center">
+<div class="w-8 h-8 bg-red-100 rounded-lg flex items-center justify-center mr-3">
+<i class="ri-file-pdf-line text-red-600"></i>
+</div>
+<div>
+<h5 class="text-sm font-medium text-gray-900">Insurance Card - Front & Back</h5>
+<p class="text-xs text-gray-500">Uploaded June 1, 2025 • 2.1 MB</p>
+</div>
+</div>
+<div class="flex items-center space-x-2">
+<button class="text-gray-400 hover:text-gray-600">
+<i class="ri-eye-line text-sm"></i>
+</button>
+<button class="text-gray-400 hover:text-gray-600">
+<i class="ri-download-line text-sm"></i>
+</button>
+</div>
+</div>
+</div>
+<div class="p-3 border border-gray-200 rounded-lg">
+<div class="flex items-center justify-between">
+<div class="flex items-center">
+<div class="w-8 h-8 bg-blue-100 rounded-lg flex items-center justify-center mr-3">
+<i class="ri-file-text-line text-blue-600"></i>
+</div>
+<div>
+<h5 class="text-sm font-medium text-gray-900">Previous Medical Records</h5>
+<p class="text-xs text-gray-500">Uploaded May 15, 2025 • 5.7 MB</p>
+</div>
+</div>
+<div class="flex items-center space-x-2">
+<button class="text-gray-400 hover:text-gray-600">
+<i class="ri-eye-line text-sm"></i>
+</button>
+<button class="text-gray-400 hover:text-gray-600">
+<i class="ri-download-line text-sm"></i>
+</button>
+</div>
+</div>
+</div>
+<div class="p-3 border border-gray-200 rounded-lg">
+<div class="flex items-center justify-between">
+<div class="flex items-center">
+<div class="w-8 h-8 bg-green-100 rounded-lg flex items-center justify-center mr-3">
+<i class="ri-image-line text-green-600"></i>
+</div>
+<div>
+<h5 class="text-sm font-medium text-gray-900">X-Ray Images</h5>
+<p class="text-xs text-gray-500">Uploaded April 28, 2025 • 12.3 MB</p>
+</div>
+</div>
+<div class="flex items-center space-x-2">
+<button class="text-gray-400 hover:text-gray-600">
+<i class="ri-eye-line text-sm"></i>
+</button>
+<button class="text-gray-400 hover:text-gray-600">
+<i class="ri-download-line text-sm"></i>
+</button>
+</div>
+</div>
+</div>
+<div class="p-3 border border-gray-200 rounded-lg">
+<div class="flex items-center justify-between">
+<div class="flex items-center">
+<div class="w-8 h-8 bg-purple-100 rounded-lg flex items-center justify-center mr-3">
+<i class="ri-file-chart-line text-purple-600"></i>
+</div>
+<div>
+<h5 class="text-sm font-medium text-gray-900">Specialist Referral Letter</h5>
+<p class="text-xs text-gray-500">Uploaded April 10, 2025 • 1.8 MB</p>
+</div>
+</div>
+<div class="flex items-center space-x-2">
+<button class="text-gray-400 hover:text-gray-600">
+<i class="ri-eye-line text-sm"></i>
+</button>
+<button class="text-gray-400 hover:text-gray-600">
+<i class="ri-download-line text-sm"></i>
+</button>
+</div>
 </div>
 </div>
 </div>
@@ -4719,6 +4861,51 @@ erxModal.remove();
 erxModal.addEventListener('click', (e) => {
 if (e.target === erxModal) {
 erxModal.remove();
+}
+});
+
+} else if (buttonText === 'Encounter Notes') {
+// Close fan menu first
+fanMenuActive = false;
+fanMenu.classList.remove('active');
+featherPenTrigger.classList.remove('active');
+setTimeout(() => {
+fanMenu.classList.add('hidden');
+}, 100);
+
+// Create Encounter Notes modal with iframe
+const encounterModal = document.createElement('div');
+encounterModal.className = 'fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 p-2';
+encounterModal.innerHTML = `
+<div class="bg-white rounded-lg w-full h-full max-w-[95vw] max-h-[95vh] flex flex-col">
+<div class="flex justify-between items-center p-4 border-b border-gray-200 bg-white rounded-t-lg">
+<h3 class="text-lg font-medium text-gray-900 flex items-center">
+<i class="ri-file-text-line mr-2 text-primary"></i>
+Encounter Notes
+</h3>
+<button class="close-encounter-modal p-1 text-gray-500 hover:bg-gray-100 rounded-full">
+<div class="w-5 h-5 flex items-center justify-center">
+<i class="ri-close-line"></i>
+</div>
+</button>
+</div>
+<div class="flex-1 overflow-hidden">
+<iframe src="encounter-notes.html" class="w-full h-full border-none" frameborder="0"></iframe>
+</div>
+</div>
+`;
+document.body.appendChild(encounterModal);
+
+// Handle modal close
+const closeButton = encounterModal.querySelector('.close-encounter-modal');
+closeButton.addEventListener('click', () => {
+encounterModal.remove();
+});
+
+// Close modal when clicking outside (but not on iframe)
+encounterModal.addEventListener('click', (e) => {
+if (e.target === encounterModal) {
+encounterModal.remove();
 }
 });
 
