corkboard trend demo

--- a/index.html
+++ b/index.html
@@ -218,6 +218,62 @@ background-color: #4f46e5 !important;
 color: white !important;
 border-color: #4f46e5 !important;
 }
+
+/* Cork board trend chart */
+.trend-chart {
+margin-top: 0.75rem;
+padding: 0.75rem;
+border: 1px solid #e5e7eb;
+border-radius: 0.5rem;
+background-color: #f9fafb;
+}
+
+.trend-chart svg {
+display: block;
+width: 100%;
+height: 120px;
+overflow: visible;
+}
+
+.trend-chart text {
+font-size: 10px;
+fill: #6b7280;
+}
+
+.trend-chart .grid-line {
+stroke: #e5e7eb;
+stroke-dasharray: 2 3;
+}
+
+.trend-chart .trend-path {
+fill: none;
+stroke: #4f46e5;
+stroke-width: 2;
+}
+
+.trend-chart .data-point {
+fill: #4f46e5;
+stroke: white;
+stroke-width: 1;
+}
+
+.trend-chart .trend-path-secondary {
+fill: none;
+stroke: #f97316;
+stroke-width: 2;
+stroke-dasharray: 4 3;
+}
+
+.trend-chart .data-point-secondary {
+fill: #f97316;
+stroke: white;
+stroke-width: 1;
+}
+
+.trend-chart .axis-line {
+stroke: #d1d5db;
+stroke-width: 1;
+}
 </style>
 </head>
 <body class="bg-gray-50 h-screen flex flex-col">
@@ -2057,6 +2113,47 @@ Email
 </div>
 <span class="text-xs bg-green-100 text-green-800 px-2 py-0.5 rounded-full">Normal</span>
 </div>
+</div>
+<div class="trend-chart">
+<div class="flex justify-between items-center mb-2">
+<p class="text-xs font-medium text-gray-700">Cholesterol Trends (mg/dL)</p>
+<div class="flex items-center space-x-3 text-[10px] text-gray-500">
+<span class="flex items-center"><span class="inline-block w-2 h-2 rounded-full bg-primary mr-1"></span>Total</span>
+<span class="flex items-center"><span class="inline-block w-2 h-2 rounded-full bg-orange-400 mr-1"></span>LDL</span>
+</div>
+</div>
+<svg viewBox="0 0 240 120" role="img" aria-labelledby="cholesterolTrendTitle">
+<title id="cholesterolTrendTitle">Total and LDL cholesterol results for Sarah Johnson from January to June 2025 showing gradual improvement.</title>
+<line class="axis-line" x1="30" y1="40" x2="30" y2="100"></line>
+<line class="grid-line" x1="30" y1="40" x2="230" y2="40"></line>
+<line class="grid-line" x1="30" y1="60" x2="230" y2="60"></line>
+<line class="grid-line" x1="30" y1="80" x2="230" y2="80"></line>
+<line class="grid-line" x1="30" y1="100" x2="230" y2="100"></line>
+<polyline class="trend-path" points="30,52 70,56 110,62 150,74 190,82 230,88"></polyline>
+<polyline class="trend-path-secondary" points="30,70 70,74 110,78 150,82 190,86 230,90"></polyline>
+<circle class="data-point" cx="30" cy="52" r="3"></circle>
+<circle class="data-point" cx="70" cy="56" r="3"></circle>
+<circle class="data-point" cx="110" cy="62" r="3"></circle>
+<circle class="data-point" cx="150" cy="74" r="3"></circle>
+<circle class="data-point" cx="190" cy="82" r="3"></circle>
+<circle class="data-point" cx="230" cy="88" r="3"></circle>
+<circle class="data-point-secondary" cx="30" cy="70" r="3"></circle>
+<circle class="data-point-secondary" cx="70" cy="74" r="3"></circle>
+<circle class="data-point-secondary" cx="110" cy="78" r="3"></circle>
+<circle class="data-point-secondary" cx="150" cy="82" r="3"></circle>
+<circle class="data-point-secondary" cx="190" cy="86" r="3"></circle>
+<circle class="data-point-secondary" cx="230" cy="90" r="3"></circle>
+<text x="20" y="44" text-anchor="end">230</text>
+<text x="20" y="64" text-anchor="end">220</text>
+<text x="20" y="84" text-anchor="end">210</text>
+<text x="30" y="112" text-anchor="middle">Jan</text>
+<text x="70" y="112" text-anchor="middle">Feb</text>
+<text x="110" y="112" text-anchor="middle">Mar</text>
+<text x="150" y="112" text-anchor="middle">Apr</text>
+<text x="190" y="112" text-anchor="middle">May</text>
+<text x="230" y="112" text-anchor="middle">Jun</text>
+</svg>
+<p class="mt-2 text-[10px] text-gray-500">Latest CMP value plotted at the right; steady improvement highlights the impact of May care plan adjustments.</p>
 </div>
 </div>
 </div>
