--- a/index.html
+++ b/index.html
@@ -274,6 +274,244 @@ stroke-width: 1;
 stroke: #d1d5db;
 stroke-width: 1;
 }
+
+/* Signature program progress */
+.program-progress-card {
+background: linear-gradient(135deg, rgba(79, 70, 229, 0.08), rgba(59, 130, 246, 0.05));
+border: 1px solid #e5e7eb;
+border-radius: 16px;
+padding: 18px;
+box-shadow: 0 10px 30px rgba(79, 70, 229, 0.08);
+}
+
+.program-progress-card .program-meta {
+display: flex;
+justify-content: space-between;
+flex-wrap: wrap;
+gap: 16px;
+}
+
+.program-progress-card .program-meta h3 {
+font-size: 0.95rem;
+font-weight: 600;
+color: #111827;
+margin-top: 2px;
+}
+
+.program-progress-card .program-meta p {
+margin: 0;
+}
+
+
+.program-progress-card .program-timeline {
+    --timeline-height: 100px;
+    position: relative;
+    margin-top: 14px;
+    padding: 14px 12px 48px 32px;
+    background: rgba(255, 255, 255, 0.25);
+    border-radius: 14px;
+    border: 1px solid rgba(148, 163, 184, 0.12);
+}
+
+
+.program-progress-card .progress-pin {
+    position: absolute;
+    left: 65%;
+    top: 8px;
+    height: calc(var(--timeline-height) + 18px);
+    transform: translateX(-50%);
+    text-align: center;
+    z-index: 2;
+    pointer-events: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 6px;
+}
+
+.program-progress-card .engagement-axis {
+    position: absolute;
+    left: 10px;
+    bottom: 12px;
+    top: 12px;
+    display: flex;
+    align-items: center;
+}
+
+.program-progress-card .engagement-axis::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 2px;
+    background: linear-gradient(180deg, rgba(148, 163, 184, 0.6) 0%, rgba(148, 163, 184, 0.1) 100%);
+    border-radius: 999px;
+}
+
+.program-progress-card .engagement-axis .axis-label {
+    writing-mode: vertical-rl;
+    transform: rotate(180deg);
+    font-size: 0.6rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 0.14em;
+    color: #4f46e5;
+    margin-left: 8px;
+}
+
+.program-progress-card .progress-pin .pin-label {
+    font-size: 0.62rem;
+    font-weight: 600;
+    color: #4f46e5;
+    white-space: nowrap;
+}
+
+.program-progress-card .progress-pin .pin-dot {
+    width: 10px;
+    height: 10px;
+    border-radius: 9999px;
+    background: #4f46e5;
+    border: 2px solid rgba(255, 255, 255, 0.9);
+    box-shadow: 0 0 0 4px rgba(79, 70, 229, 0.18);
+}
+
+.program-progress-card .progress-pin .pin-line {
+    width: 2px;
+    height: calc(var(--timeline-height) + 6px);
+    background: linear-gradient(180deg, rgba(79, 70, 229, 0.55) 0%, rgba(79, 70, 229, 0) 100%);
+    border-radius: 999px;
+}
+
+
+.program-progress-card .bars {
+    display: flex;
+    align-items: flex-end;
+    gap: 0.1rem;
+    position: relative;
+    justify-content: center;
+}
+
+.program-progress-card .bars::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 2px;
+    background: #dbeafe;
+}
+
+
+.program-progress-card .bar {
+    flex: 0 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 6px;
+    min-width: 0;
+}
+
+.program-progress-card .bar-visual {
+    height: var(--timeline-height);
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    width: 100%;
+}
+
+
+.program-progress-card .bar-inner {
+    width: calc(var(--duration, 7) * 0.09rem + 0.58rem);
+    border-radius: 999px 999px 6px 6px;
+    background: #6366f1;
+    height: calc(var(--engagement, 50) * 0.85%);
+    min-height: 12px;
+    box-shadow: 0 5px 12px rgba(15, 23, 42, 0.14);
+    position: relative;
+}
+
+.program-progress-card .bar-inner.task-testing {
+background: #9ca3af;
+}
+
+.program-progress-card .bar-inner.task-debrief {
+background: #3b82f6;
+}
+
+.program-progress-card .bar-inner.task-workout {
+background: #10b981;
+}
+
+.program-progress-card .bar-inner.task-supplement {
+background: #f97316;
+}
+
+.program-progress-card .bar-details .step {
+    font-size: 0.75rem;
+    font-weight: 600;
+    color: #111827;
+}
+
+.program-progress-card .bar-details .meta {
+    font-size: 0.66rem;
+    color: #6b7280;
+    margin-top: 1px;
+}
+
+.program-progress-card .bar-details .meta.emphasis {
+    color: #4f46e5;
+    font-weight: 600;
+    margin-top: 2px;
+}
+
+.program-progress-card .bar-date {
+    font-size: 0.62rem;
+    letter-spacing: 0.06em;
+    color: #9ca3af;
+    text-transform: uppercase;
+}
+
+.program-progress-card .legend {
+display: flex;
+flex-wrap: wrap;
+gap: 12px;
+margin-top: 18px;
+}
+
+.program-progress-card .legend-item {
+display: flex;
+align-items: center;
+gap: 6px;
+font-size: 0.7rem;
+color: #4b5563;
+}
+
+.program-progress-card .legend-swatch {
+width: 10px;
+height: 10px;
+border-radius: 9999px;
+}
+
+@media (max-width: 900px) {
+ .program-progress-card {
+ padding: 16px;
+ }
+
+ .program-progress-card .program-meta {
+ flex-direction: column;
+ align-items: flex-start;
+ }
+
+ .program-progress-card .bars {
+ gap: 1.2rem;
+ }
+
+ .program-progress-card .bar-inner {
+ width: 1.9rem;
+ }
+}
 </style>
 </head>
 <body class="bg-gray-50 h-screen flex flex-col">
@@ -1392,7 +1630,6 @@ Calendar
 </div>
 Billing and Shipping
 </button>
-</div>
 </div>
 <!-- Message Thread -->
 <div id="message-list" class="message-list flex-1 overflow-y-auto p-4 bg-white">
@@ -2598,6 +2835,91 @@ modalContent = `
 </button>
 </div>
 <div class="space-y-6">
+<div class="program-progress-card">
+    <div class="program-meta">
+        <div>
+            <p class="text-[11px] uppercase tracking-wide font-medium text-gray-500">Signature Program</p>
+            <h3>Body Sculpt 90 • 12-Week Lifestyle Reset</h3>
+            <p class="text-xs text-gray-500">Apr 1 – Jun 30, 2025 · Clinician-guided body recomposition protocol with weekly accountability touchpoints.</p>
+        </div>
+        <div class="text-right">
+            <p class="text-[11px] uppercase tracking-wide font-medium text-gray-400">Progress</p>
+            <p class="text-sm font-semibold text-primary">66% complete</p>
+            <p class="text-xs text-gray-500">Next program check-in • Jun 18, 2025</p>
+        </div>
+    </div>
+        <div class="program-timeline">
+            <div class="progress-pin">
+                <div class="pin-label">Today · Week 8</div>
+                <div class="pin-line"></div>
+                <div class="pin-dot"></div>
+            </div>
+            <div class="engagement-axis">
+                <span class="axis-label">Patient Interactions</span>
+            </div>
+            <div class="bars">
+                <div class="bar">
+                    <div class="bar-visual">
+                        <div class="bar-inner task-testing" style="--duration:7; --engagement:58;"></div>
+                    </div>
+                    <div class="bar-details">
+                        <p class="step">Baseline Testing</p>
+                        <p class="meta">5 touchpoints · Apr 1 – Apr 7</p>
+                    </div>
+                    <span class="bar-date">Apr 1</span>
+                </div>
+            <div class="bar">
+                <div class="bar-visual">
+                    <div class="bar-inner task-debrief" style="--duration:4; --engagement:42;"></div>
+                </div>
+                    <div class="bar-details">
+                        <p class="step">Results Debrief</p>
+                        <p class="meta">3 touchpoints · Apr 15 – Apr 18</p>
+                    </div>
+                    <span class="bar-date">Apr 18</span>
+                </div>
+            <div class="bar">
+                <div class="bar-visual">
+                    <div class="bar-inner task-workout" style="--duration:42; --engagement:84;"></div>
+                </div>
+                    <div class="bar-details">
+                        <p class="step">Training Sprint</p>
+                        <p class="meta">8 touchpoints · Apr 22 – Jun 2</p>
+                    </div>
+                    <span class="bar-date">May 15</span>
+                </div>
+            <div class="bar">
+                <div class="bar-visual">
+                    <div class="bar-inner task-supplement" style="--duration:13; --engagement:65;"></div>
+                </div>
+                    <div class="bar-details">
+                        <p class="step">Supplement Fulfillment</p>
+                        <p class="meta">4 touchpoints · Jun 3 – Jun 15</p>
+                    </div>
+                    <span class="bar-date">Jun 12</span>
+                </div>
+        </div>
+    </div>
+    <div class="legend">
+        <div class="legend-item">
+            <span class="legend-swatch" style="background:#9ca3af;"></span>
+            <span>Diagnostics & testing</span>
+        </div>
+        <div class="legend-item">
+            <span class="legend-swatch" style="background:#3b82f6;"></span>
+            <span>Debrief & coaching</span>
+        </div>
+        <div class="legend-item">
+            <span class="legend-swatch" style="background:#10b981;"></span>
+            <span>Workout plan execution</span>
+        </div>
+        <div class="legend-item">
+            <span class="legend-swatch" style="background:#f97316;"></span>
+            <span>Supplement fulfillment</span>
+        </div>
+    </div>
+    <p class="mt-2 text-[11px] text-gray-500">Bar height = logged engagement actions (messages, check-ins, workout uploads) captured during each phase.</p>
+</div>
 <div>
 <h4 class="text-sm font-medium text-gray-900 mb-3">Current Medications</h4>
 <div class="grid grid-cols-2 gap-4">
